[tool.poetry]
name = "nonogram-api"
version = "0.1.0"
description = ""
authors = ["Mihail Butvin <butvin.mihail@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
deta = {extras = ["async"], version = "^1.2.0"}
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
